--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@paypal/react-paypal-js": "^8.8.2",
     "@tailwindcss/vite": "^4.0.14",
     "@webcontainer/api": "^1.5.1-internal.9",
+    "@xterm/addon-fit": "^0.10.0",
     "appwrite": "^17.0.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -26,7 +27,9 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-use-measure": "^2.1.7",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.0.14",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
