Corrected Vite peer dependency in package.json

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_GEMINI_API_KEY=AIzaSyD04Ub3GyixHOdqAgnor9uz4N63vgET7Z4
+VITE_GROQ_API_KEY=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
+GROQ_API_KEY=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
