--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "myappai",
   "private": true,
@@ -15,15 +16,22 @@
     "@tailwindcss/vite": "^4.0.14",
     "@webcontainer/api": "^1.5.1-internal.9",
     "@xterm/addon-fit": "^0.10.0",
+    "ace-builds": "^1.39.1",
     "appwrite": "^17.0.1",
+    "axios": "^1.8.4",
     "body-parser": "^1.20.3",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
+    "groq": "^3.81.0",
+    "groq-sdk": "^0.17.0",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
+    "react-ace": "^14.0.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-use-measure": "^2.1.7",
@@ -44,6 +52,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.2",
-    "vite-plugin-mkcert": "^1.17.8"
+    "vite-plugin-mkcert": "^1.17.8",
+    "vite-plugin-node": "^5.0.0"
   }
 }
