--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@paypal/checkout-server-sdk": "^1.0.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "groq-sdk": "^0.17.0"
   }
 }
