--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "myappai",
   "private": true,
@@ -6,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -56,3 +55,4 @@
     "vite-plugin-node": "^5.0.0"
   }
 }
+
